# ar-video-conf-mobile-demo

./: .gitignore  README.md  build.gradle  mobile.py  settings.gradle
app/: build.gradle  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  tensorflow_wrapper.cpp
distribution/tensorflow/include/: c_api.h
gradle/wrapper/: gradle-wrapper.properties
python/: AUnetBackgroundRemoval.py  README.md  convert.sh  converter.py  data_preparation.py  keras_to_tensorflow.py  requirements.txt  segm_model_v9.h5  supervisely_preprocessing.py  unet.py  video.py  video_v9.py
python/experiment_results/tflite/: fil_12_shape_32x32_latency_16fp.tflite  fil_12_shape_64x64_latency_16fp.tflite  (+4 more)
python/tfjs/: model.json
python/tflite/: segm_model_v5_0065_default_32fp.tflite  segm_model_v5_0065_latency_16fp.tflite  segm_model_v9_default_16fp.tflite  segm_model_v9_default_32fp.tflite  segm_model_v9_latency_16fp.tflite
pythonTestMobile/: maskCustom0_1Bitmap.bytes  maskCustom1_1Bitmap.bytes  metadata_writer_for_image_classifier.py  mobileResultsComparator.py  mobile_test.py  normalized0_1Bitmap.bytes  normalized1_1Bitmap.bytes  origBitmap.bytes  scaledBitmap.bytes  segm_model_v5_0065_latency_16fp.tflite
pythonTestMobile/classify_wrapper/: build.gradle  myclassifiermodel.md
pythonTestMobile/model_with_metadata/: segm_model_v5_0065_latency_16fp.json  segm_model_v5_0065_latency_16fp.tflite
webapp/: .gcloudignore  app.yaml  package-lock.json  package.json
webapp/public/: index.html  opencv.html
webapp/src/: App.js  constants.js  styles.scss  util.js
(+114 files in other folders)
